DIAC-2407 springboot and java upgrdde (#240)
* spring upgrade prep

* springboot 2.x -> 3.0

* TEMP for build/suppression fixes

* TEMP for build/suppression fixes

* springboot 3.0 -> 3.1

* springboot 3.1 -> 3.4 and tomcat bump for fix

* local suppression bump

* temp suppressing all CVEs until upgrade finished

* springboot 3.4 -> 3.5

* attempt at bypassing dependencycheck

* TEMP bypassing dependencycheck

* fix for flyway version

* suppression bump

* flyway fix 2

* flyway fix 3

* java 17 -> 21

* version bumps

* version bumps

* suppression bump

* build gradle cleanup

* build gradle cleanup

* fix

* bbetter jackson management

* bbetter serenity management

* bbetter serenity management

* fix

* CVE fix

* adding local suppression file back

* fixing CVEs attempt

* adding comments

* test

* fix

* fixes and updated suppressions

* improving EventTest

* improvement

* bumps

* sonar fix

* reverting bumps

* bumping java

* unbump java

* bump java

* bump java

* netty bump

* fix

* removing suppressions.xml to try to fix

* adding suppressions back with detailed notes

* adding comments for CVE fixes

* uk.gov.hmcts.java bump

* removing false positive suppression

* owasp

* tomcat global bump

* netty bump

* adding test retry